--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">prueba_acceso_movilidad_proconsi</string>
+    <string name="app_name">AndroidBoostTraining</string>
 </resources>
